syntax = "proto3";

option go_package = "github.com/IBAX-io/go-ibax/packages/types";

package types;

import "tx.proto";

//AfterTxs defined block batch process tx for sql DML
message AfterTxs {
  repeated AfterTx txs =1;
  //TxBinLogSql defined contract exec sql for tx DML
//  repeated bytes tx_bin_log_sql = 2;
  repeated     RollbackTx rts = 3;
}

message AfterTx {
    bytes used_tx = 1;
    LogTransaction lts = 2;
    pbgo.TxResult upd_tx_status = 3;
}

message RollbackTx {
  int64 id = 1;
  int64 block_id = 2;
  bytes tx_hash = 3;
  string name_table = 4;
  string table_id = 5;
  string data = 6;
  bytes data_hash = 7;
}

message LogTransaction {
  bytes hash = 1;
  int64 block = 2;
//  bytes tx_data = 3;
  int64 timestamp = 4;
  int64 address = 5;
  int64 ecosystem_id = 6;
  string contract_name = 7;
  pbgo.TxInvokeStatusCode invoke_status = 8;
}
